[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ablation-test"
version = "0.1.0"
description = "A test repository for ablation studies."
requires-python = ">=3.11"
dependencies = [
    "obliteratus @ git+https://github.com/elder-plinius/OBLITERATUS.git",
    "accelerate",
    "bitsandbytes",
]

[project.scripts]
ablation-test       = "ablation_test.test:main"

[tool.hatch.build.targets.wheel]
packages = ["ablation_test"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# Nightly torch pins triton to a specific git hash uv can't resolve.
# This overrides that pin to accept any compatible version.
override-dependencies = [
    "triton>=3.0; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = { index = "pytorch-nightly-cu128" }

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
